--- a/.github/workflows/v3_klickeruzhprod-responses(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-responses(qa).yml
@@ -1,16 +1,16 @@
-name: Build and deploy backend-responses to Function App (QA)
+name: Build and deploy func-incoming-responses to Function App (QA)
 
 on:
   push:
     branches:
       - 'v3'
     paths:
-      - 'apps/backend-responses/**'
+      - 'apps/func-incoming-responses/**'
       - '.github/workflows/v3_klickeruzhprod-responses**'
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-responses'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/func-incoming-responses'
   NODE_VERSION: '18.x'
 
 jobs:
@@ -35,7 +35,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          pnpm run build --scope @klicker-uzh/backend-responses
+          pnpm run build --scope @klicker-uzh/func-incoming-responses
           pnpm prune --prod --config.ignore-scripts=true
 
       - name: 'Run Azure Functions Action'
