--- a/.github/workflows/v3_klickeruzhprod-response-processor.yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor.yml
@@ -1,4 +1,4 @@
-name: Build and deploy backend-response-processor to Function App (Production)
+name: Build and deploy func-response-processor to Function App (Production)
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-response-processor'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/func-response-processor'
   NODE_VERSION: '18.x'
 
 jobs:
@@ -31,7 +31,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          pnpm run build --scope @klicker-uzh/backend-response-processor
+          pnpm run build --scope @klicker-uzh/func-response-processor
           pnpm prune --prod --config.ignore-scripts=true
 
       - name: 'Run Azure Functions Action'
