--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@azure/functions": "4.0.0-alpha.11",
+    "@azure/storage-blob": "12.15.0",
     "jsonwebtoken": "9.0.1"
   },
   "devDependencies": {
