--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -2,16 +2,21 @@
   "name": "@klicker-uzh/auth",
   "version": "3.0.0-beta.4",
   "license": "AGPL-3.0",
-  "scripts": {
-    "dev": "next dev --port 3010",
-    "dev:offline": "next dev --port 3010",
-    "build": "next build",
-    "build:test": "cross-env NODE_ENV=test next build",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "start": "next start --port 3010",
-    "start:test": "cross-env NODE_ENV=test npm start",
-    "lint": "next lint"
+  "dependencies": {
+    "@klicker-uzh/i18n": "workspace:*",
+    "@klicker-uzh/next-config": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/shared-components": "workspace:*",
+    "@next-auth/prisma-adapter": "1.0.7",
+    "@uzh-bf/design-system": "2.0.12",
+    "bcryptjs": "2.4.3",
+    "jsonwebtoken": "9.0.1",
+    "next": "13.4.13",
+    "next-auth": "4.22.3",
+    "next-intl": "2.19.1",
+    "nookies": "2.5.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -33,26 +38,21 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
   },
-  "dependencies": {
-    "@klicker-uzh/i18n": "workspace:*",
-    "@klicker-uzh/next-config": "workspace:*",
-    "@klicker-uzh/prisma": "workspace:*",
-    "@klicker-uzh/shared-components": "workspace:*",
-    "@next-auth/prisma-adapter": "1.0.7",
-    "@uzh-bf/design-system": "2.0.12",
-    "bcryptjs": "2.4.3",
-    "jsonwebtoken": "9.0.1",
-    "next": "13.4.13",
-    "next-auth": "4.22.3",
-    "next-intl": "2.19.1",
-    "nookies": "2.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "volta": {
-    "extends": "../../package.json"
+  "scripts": {
+    "build": "next build",
+    "build:test": "cross-env NODE_ENV=test next build",
+    "dev": "next dev --port 3010",
+    "dev:offline": "next dev --port 3010",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "next lint",
+    "start": "next start --port 3010",
+    "start:test": "cross-env NODE_ENV=test npm start"
   },
   "engines": {
     "node": "=18"
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
