--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -7,21 +7,31 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "dev": "npm-run-all --parallel dev:build dev:run",
-    "dev:offline": "pnpm run dev",
-    "dev:build": "tsup --watch",
-    "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node -r dotenv/config ./dist/index.js'",
-    "build": "cross-env NODE_ENV=production tsup",
-    "build:test": "pnpm run build",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "start": "node -r dotenv/config dist/index.js",
-    "start:test": "nyc --silent npm start",
-    "check": "tsc --noEmit"
-  },
-  "engines": {
-    "node": "=18"
+  "dependencies": {
+    "@envelop/response-cache": "4.0.8",
+    "@envelop/response-cache-redis": "2.0.8",
+    "@envelop/sentry": "5.1.1",
+    "@escape.tech/graphql-armor": "1.7.3",
+    "@graphql-yoga/plugin-csrf-prevention": "1.5.1",
+    "@graphql-yoga/plugin-persisted-operations": "1.9.1",
+    "@graphql-yoga/plugin-response-cache": "1.9.1",
+    "@graphql-yoga/redis-event-target": "1.0.0",
+    "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
+    "@sentry/node": "7.52.1",
+    "@sentry/tracing": "7.52.1",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "graphql": "16.7.1",
+    "graphql-ws": "5.13.1",
+    "graphql-yoga": "3.9.1",
+    "ioredis": "5.3.2",
+    "jsonwebtoken": "9.0.1",
+    "next-auth": "4.22.3",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "ws": "8.13.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.0",
@@ -48,31 +58,21 @@
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
-  "dependencies": {
-    "@envelop/response-cache": "4.0.8",
-    "@envelop/response-cache-redis": "2.0.8",
-    "@envelop/sentry": "5.1.1",
-    "@escape.tech/graphql-armor": "1.7.3",
-    "@graphql-yoga/plugin-csrf-prevention": "1.5.1",
-    "@graphql-yoga/plugin-persisted-operations": "1.9.1",
-    "@graphql-yoga/plugin-response-cache": "1.9.1",
-    "@graphql-yoga/redis-event-target": "1.0.0",
-    "@klicker-uzh/graphql": "workspace:*",
-    "@klicker-uzh/prisma": "workspace:*",
-    "@sentry/node": "7.52.1",
-    "@sentry/tracing": "7.52.1",
-    "cookie-parser": "1.4.6",
-    "cors": "2.8.5",
-    "express": "4.18.2",
-    "graphql": "16.7.1",
-    "graphql-ws": "5.13.1",
-    "graphql-yoga": "3.9.1",
-    "ioredis": "5.3.2",
-    "jsonwebtoken": "9.0.1",
-    "next-auth": "4.22.3",
-    "passport": "0.6.0",
-    "passport-jwt": "4.0.1",
-    "ws": "8.13.0"
+  "scripts": {
+    "build": "cross-env NODE_ENV=production tsup",
+    "build:test": "pnpm run build",
+    "check": "tsc --noEmit",
+    "dev": "npm-run-all --parallel dev:build dev:run",
+    "dev:build": "tsup --watch",
+    "dev:offline": "pnpm run dev",
+    "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node -r dotenv/config ./dist/index.js'",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "start": "node -r dotenv/config dist/index.js",
+    "start:test": "nyc --silent npm start"
+  },
+  "engines": {
+    "node": "=18"
   },
   "volta": {
     "extends": "../../package.json"
