--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -3,20 +3,6 @@
   "name": "@klicker-uzh/frontend-pwa",
   "version": "3.0.0-beta.4",
   "license": "AGPL-3.0",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development next dev --port 3001",
-    "dev:offline": "cross-env NODE_ENV=development next dev --port 3001",
-    "build": "next build",
-    "build:test": "cross-env NODE_ENV=test next build",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "start": "next start --port 3001",
-    "start:test": "cross-env NODE_ENV=test npm start",
-    "lint": "next lint",
-    "pushTest": "node src/testPush.js",
-    "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts",
-    "check": "tsc --noEmit"
-  },
   "dependencies": {
     "@apollo/client": "3.8.0",
     "@bigheads/core": "0.3.3",
@@ -83,10 +69,24 @@
     "typescript": "5.0.4",
     "web-push": "3.6.1"
   },
-  "volta": {
-    "extends": "../../package.json"
+  "scripts": {
+    "build": "next build",
+    "build:test": "cross-env NODE_ENV=test next build",
+    "check": "tsc --noEmit",
+    "dev": "cross-env NODE_ENV=development next dev --port 3001",
+    "dev:offline": "cross-env NODE_ENV=development next dev --port 3001",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts",
+    "lint": "next lint",
+    "pushTest": "node src/testPush.js",
+    "start": "next start --port 3001",
+    "start:test": "cross-env NODE_ENV=test npm start"
   },
   "engines": {
     "node": "=18"
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
