--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "name": "@klicker-uzh/monorepo",
   "description": "KlickerUZH instant-class-response system.",
   "version": "3.0.0-beta.4",
-  "license": "AGPL-3.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uzh-bf/klicker-uzh.git"
-  },
-  "bugs": {
-    "url": "https://github.com/uzh-bf/klicker-uzh/issues"
-  },
+  "repository": "uzh-bf/klicker-uzh.git",
   "homepage": "https://www.klicker.uzh.ch/",
+  "bugs": "https://github.com/uzh-bf/klicker-uzh/issues",
+  "license": "AGPL-3.0",
   "maintainers": [
     "Roland Schlaefli <roland.schlaefli@bf.uzh.ch>",
     "Julius Schlapbach <julius.schlapbach@bf.uzh.ch>",
@@ -29,35 +24,6 @@
     "Florina Vogel <florina.vogel@bf.uzh.ch>",
     "Valentin Meyer <valentin.meyer@bf.uzh.ch>"
   ],
-  "scripts": {
-    "dev": "doppler run --config dev -- turbo run dev",
-    "dev:offline": "doppler run --config dev -- turbo run dev:offline",
-    "build": "turbo run build",
-    "publish": "turbo run publish",
-    "format": "turbo run format --parallel --continue",
-    "format:check": "turbo run format:check --parallel --continue",
-    "lint": "turbo run lint --parallel --continue",
-    "check": "turbo run check --parallel --continue",
-    "//release": "standard-version --dry-run",
-    "//release:dry": "standard-version --dry-run",
-    "release:alpha": "standard-version --prerelease alpha --no-verify",
-    "release:alpha:dry": "standard-version --dry-run --prerelease alpha",
-    "release:beta": "standard-version --prerelease beta --no-verify",
-    "release:beta:dry": "standard-version --dry-run --prerelease beta",
-    "release:rc": "standard-version --prerelease rc --no-verify",
-    "release:rc:dry": "standard-version --dry-run --prerelease rc",
-    "test": "turbo run test",
-    "test:run": "turbo run test:run",
-    "start": "turbo run start",
-    "start:test": "turbo run start:test",
-    "prepare": "husky install",
-    "prisma:setup": "pnpm run --filter @klicker-uzh/prisma prisma:setup",
-    "prisma:migrate": "pnpm run --filter @klicker-uzh/prisma prisma:migrate",
-    "prisma:reset": "pnpm run --filter @klicker-uzh/prisma prisma:reset",
-    "export": "pnpm run --filter @klicker-uzh/migration-v2-export export",
-    "import": "pnpm run --filter @klicker-uzh/migration-v3-import import",
-    "syncpack:format": "syncpack format"
-  },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "4.14.1",
     "husky": "8.0.3",
@@ -66,12 +32,41 @@
     "turbo": "1.10.12",
     "yaml": "2.3.0"
   },
+  "scripts": {
+    "//release": "standard-version --dry-run",
+    "//release:dry": "standard-version --dry-run",
+    "build": "turbo run build",
+    "check": "turbo run check --parallel --continue",
+    "dev": "doppler run --config dev -- turbo run dev",
+    "dev:offline": "doppler run --config dev -- turbo run dev:offline",
+    "export": "pnpm run --filter @klicker-uzh/migration-v2-export export",
+    "format": "turbo run format --parallel --continue",
+    "format:check": "turbo run format:check --parallel --continue",
+    "import": "pnpm run --filter @klicker-uzh/migration-v3-import import",
+    "lint": "turbo run lint --parallel --continue",
+    "prepare": "husky install",
+    "prisma:migrate": "pnpm run --filter @klicker-uzh/prisma prisma:migrate",
+    "prisma:reset": "pnpm run --filter @klicker-uzh/prisma prisma:reset",
+    "prisma:setup": "pnpm run --filter @klicker-uzh/prisma prisma:setup",
+    "publish": "turbo run publish",
+    "release:alpha": "standard-version --prerelease alpha --no-verify",
+    "release:alpha:dry": "standard-version --dry-run --prerelease alpha",
+    "release:beta": "standard-version --prerelease beta --no-verify",
+    "release:beta:dry": "standard-version --dry-run --prerelease beta",
+    "release:rc": "standard-version --prerelease rc --no-verify",
+    "release:rc:dry": "standard-version --dry-run --prerelease rc",
+    "start": "turbo run start",
+    "start:test": "turbo run start:test",
+    "syncpack:format": "syncpack format",
+    "test": "turbo run test",
+    "test:run": "turbo run test:run"
+  },
+  "engines": {
+    "node": "=18"
+  },
   "volta": {
     "node": "18.17.0",
     "pnpm": "8.6.12"
   },
-  "packageManager": "pnpm@8.6.12",
-  "engines": {
-    "node": "=18"
-  }
+  "packageManager": "pnpm@8.6.12"
 }
