--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -7,33 +7,29 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "analyze": "size-limit --why",
-    "generate": "graphql-codegen --config codegen.ts",
-    "build": "run-s generate build:ts",
-    "build:ts": "cross-env NODE_ENV=production tsup --dts",
-    "dev": "npm-run-all --parallel dev:graphql dev:ts",
-    "dev:offline": "pnpm run dev",
-    "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
-    "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "size": "size-limit",
-    "check": "tsc --noEmit"
+  "dependencies": {
+    "@azure/service-bus": "7.9.0",
+    "@klicker-uzh/grading": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
+    "@pothos/core": "3.33.0",
+    "@pothos/plugin-prisma": "3.56.0",
+    "@pothos/plugin-scope-auth": "3.20.0",
+    "@pothos/plugin-validation": "3.10.0",
+    "axios": "1.4.0",
+    "bcryptjs": "2.4.3",
+    "dayjs": "1.11.9",
+    "generate-password": "1.7.0",
+    "graphql": "16.7.1",
+    "graphql-scalars": "1.22.2",
+    "graphql-yoga": "3.9.1",
+    "jsonwebtoken": "9.0.1",
+    "mathjs": "11.9.1",
+    "node-schedule": "2.1.1",
+    "ramda": "0.29.0",
+    "uuid": "9.0.0",
+    "validator": "13.9.0",
+    "zod": "3.21.4"
   },
-  "engines": {
-    "node": "=18"
-  },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/ops.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/fragment-matcher": "5.0.0",
@@ -73,30 +69,34 @@
     "typescript": "5.1.6",
     "web-push": "3.6.1"
   },
-  "dependencies": {
-    "@azure/service-bus": "7.9.0",
-    "@klicker-uzh/grading": "workspace:*",
-    "@klicker-uzh/prisma": "workspace:*",
-    "@pothos/core": "3.33.0",
-    "@pothos/plugin-prisma": "3.56.0",
-    "@pothos/plugin-scope-auth": "3.20.0",
-    "@pothos/plugin-validation": "3.10.0",
-    "axios": "1.4.0",
-    "bcryptjs": "2.4.3",
-    "dayjs": "1.11.9",
-    "generate-password": "1.7.0",
-    "graphql": "16.7.1",
-    "graphql-scalars": "1.22.2",
-    "graphql-yoga": "3.9.1",
-    "jsonwebtoken": "9.0.1",
-    "mathjs": "11.9.1",
-    "node-schedule": "2.1.1",
-    "ramda": "0.29.0",
-    "uuid": "9.0.0",
-    "validator": "13.9.0",
-    "zod": "3.21.4"
+  "scripts": {
+    "analyze": "size-limit --why",
+    "build": "run-s generate build:ts",
+    "build:ts": "cross-env NODE_ENV=production tsup --dts",
+    "check": "tsc --noEmit",
+    "dev": "npm-run-all --parallel dev:graphql dev:ts",
+    "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
+    "dev:offline": "pnpm run dev",
+    "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "generate": "graphql-codegen --config codegen.ts",
+    "size": "size-limit"
+  },
+  "engines": {
+    "node": "=18"
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "dist/index.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/ops.js",
+      "limit": "10 KB"
+    }
+  ]
 }
