--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -7,29 +7,8 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "analyze": "size-limit --why",
-    "build": "cross-env NODE_ENV=production tsup",
-    "build:watch": "cross-env NODE_ENV=development tsup --watch",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "size": "size-limit",
-    "check": "tsc --noEmit"
-  },
-  "engines": {
-    "node": "=18"
-  },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10 KB"
-    }
-  ],
-  "peerDependencies": {
-    "@uzh-bf/design-system": "2.0.12",
-    "next": "13.4.13",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+  "dependencies": {
+    "body-parser": "1.20.2"
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
@@ -43,10 +22,31 @@
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
-  "dependencies": {
-    "body-parser": "1.20.2"
+  "peerDependencies": {
+    "@uzh-bf/design-system": "2.0.12",
+    "next": "13.4.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "scripts": {
+    "analyze": "size-limit --why",
+    "build": "cross-env NODE_ENV=production tsup",
+    "build:watch": "cross-env NODE_ENV=development tsup --watch",
+    "check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "size": "size-limit"
+  },
+  "engines": {
+    "node": "=18"
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "dist/index.js",
+      "limit": "10 KB"
+    }
+  ]
 }
