--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -1,40 +1,11 @@
 {
+  "private": true,
   "name": "@klicker-uzh/shared-components",
   "main": "src/index.ts",
   "types": "src/index.ts",
-  "private": true,
-  "scripts": {
-    "dev": "run-p dev:tw:*",
-    "dev:offline": "run-p dev:tw:*",
-    "dev:tw:components": "tailwindcss -i src/components.css -o dist/components.css -w",
-    "dev:tw:utilities": "tailwindcss -i src/utilities.css -o dist/utilities.css -w",
-    "build": "run-p build:tw:*",
-    "build:tw:components": "tailwindcss -i src/components.css -o dist/components.css",
-    "build:tw:utilities": "tailwindcss -i src/utilities.css -o dist/utilities.css",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "check": "tsc --noEmit"
-  },
-  "volta": {
-    "extends": "../../package.json"
-  },
-  "peerDependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.4.2",
-    "@fortawesome/free-regular-svg-icons": "6.4.2",
-    "@fortawesome/free-solid-svg-icons": "6.4.2",
-    "@fortawesome/react-fontawesome": "0.2.0",
-    "@uzh-bf/design-system": "2.0.12",
-    "formik": "2.4.3",
-    "next": "13.4.13",
-    "next-intl": "2.19.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "1.14.0",
-    "yup": "1.2.0"
-  },
   "devDependencies": {
-    "@klicker-uzh/markdown": "workspace:*",
     "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/markdown": "workspace:*",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
@@ -52,5 +23,34 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "typescript": "5.0.4"
+  },
+  "peerDependencies": {
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@uzh-bf/design-system": "2.0.12",
+    "formik": "2.4.3",
+    "next": "13.4.13",
+    "next-intl": "2.19.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "1.14.0",
+    "yup": "1.2.0"
+  },
+  "scripts": {
+    "build": "run-p build:tw:*",
+    "build:tw:components": "tailwindcss -i src/components.css -o dist/components.css",
+    "build:tw:utilities": "tailwindcss -i src/utilities.css -o dist/utilities.css",
+    "check": "tsc --noEmit",
+    "dev": "run-p dev:tw:*",
+    "dev:offline": "run-p dev:tw:*",
+    "dev:tw:components": "tailwindcss -i src/components.css -o dist/components.css -w",
+    "dev:tw:utilities": "tailwindcss -i src/utilities.css -o dist/utilities.css -w",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
