chore: initial mismatches cleanup

--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -14,10 +14,11 @@
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
-    "@types/node": "^18.17.3",
+    "@types/node": "^18.17.4",
     "cross-env": "7.0.3",
+    "eslint": "8.45.0",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
