--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -38,17 +38,18 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.17",
     "@types/ioredis-mock": "^8.2.1",
-    "@types/jest": "^29.0.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.0.0",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.17.4",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
     "@uzh-bf/design-system": "2.0.12",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
+    "eslint": "8.45.0",
     "ioredis-mock": "8.7.0",
     "jest": "29.5.0",
     "nodemon": "2.0.22",
