--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -23,7 +23,7 @@
     "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
     "formik": "2.4.3",
-    "graphql": "16.6.0",
+    "graphql": "16.7.1",
     "graphql-ws": "5.13.1",
     "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
@@ -40,11 +40,11 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
     "@types/body-parser": "^1.19.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.17.3",
+    "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
@@ -53,12 +53,13 @@
     "babel-loader": "8.2.5",
     "cross-env": "7.0.3",
     "cssnano": "6.0.1",
+    "eslint": "8.45.0",
     "eslint-config-next": "13.4.13",
-    "postcss": "8.4.23",
+    "postcss": "8.4.27",
     "postcss-import": "15.1.0",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
-    "prettier-plugin-tailwindcss": "0.3.0",
+    "prettier-plugin-organize-imports": "3.2.3",
+    "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "ts-node": "10.9.1",
