--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -21,7 +21,7 @@
     "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
     "formik": "2.4.3",
-    "graphql": "16.6.0",
+    "graphql": "16.7.1",
     "graphql-ws": "5.13.1",
     "is-hotkey": "0.2.0",
     "js-search": "2.0.1",
@@ -40,7 +40,7 @@
     "react-qrcode-logo": "2.9.0",
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
-    "recharts": "2.6.2",
+    "recharts": "2.7.2",
     "remark-slate": "1.8.6",
     "sharp": "0.32.4",
     "slate": "0.94.1",
@@ -51,12 +51,12 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
     "@types/d3": "^7.4.0",
     "@types/js-search": "^1.4.0",
     "@types/lodash": "^4.14.196",
-    "@types/node": "^18.17.3",
+    "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
@@ -65,12 +65,13 @@
     "babel-loader": "8.2.5",
     "cross-env": "7.0.3",
     "cssnano": "6.0.1",
+    "eslint": "8.45.0",
     "eslint-config-next": "13.4.13",
-    "postcss": "8.4.23",
+    "postcss": "8.4.27",
     "postcss-import": "15.1.0",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
-    "prettier-plugin-tailwindcss": "0.3.0",
+    "prettier-plugin-organize-imports": "3.2.3",
+    "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "typescript": "5.0.4"
