--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -15,13 +15,14 @@
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
     "@tsconfig/recommended": "1.0.2",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.11.9",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.17.4",
     "azure-functions-core-tools": "4.0.5274",
     "cross-env": "7.0.3",
+    "eslint": "8.45.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "tsup": "7.2.0",
     "typescript": "5.1.6"
   },
