--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -19,17 +19,18 @@
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
     "@tsconfig/recommended": "1.0.2",
-    "@types/jsonwebtoken": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/md5": "2.3.2",
-    "@types/node": "^18.11.9",
-    "@types/ramda": "^0.29.0",
+    "@types/node": "^18.17.4",
+    "@types/ramda": "^0.29.3",
     "@uzh-bf/design-system": "2.0.12",
     "azure-functions-core-tools": "4.0.5274",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
+    "eslint": "8.45.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "tsup": "7.2.0",
     "typescript": "5.1.6"
   },
