--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -14,13 +14,14 @@
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
-    "@types/jest": "^29.0.2",
-    "@types/node": "^18.17.3",
-    "@types/ramda": "^0.29.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^18.17.4",
+    "@types/ramda": "^0.29.3",
     "cross-env": "7.0.3",
+    "eslint": "8.45.0",
     "jest": "29.5.0",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
     "ts-jest": "29.1.0",
     "tsup": "6.7.0",
