--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -48,7 +48,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.17.3",
+    "@types/node": "^18.17.4",
     "@types/node-schedule": "^2.1.0",
     "@types/ramda": "^0.29.3",
     "@types/uuid": "^9.0.2",
@@ -56,12 +56,13 @@
     "@types/web-push": "^3.3.2",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
+    "eslint": "8.45.0",
     "graphql-codegen-persisted-query-ids": "0.1.2",
     "ioredis": "5.3.2",
     "jest": "29.5.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
