--- a/packages/migration-v3-import/package.json
+++ b/packages/migration-v3-import/package.json
@@ -18,10 +18,11 @@
     "axios": "1.4.0",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
+    "eslint": "8.45.0",
     "mongoose": "7.3.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "prisma": "4.14.1",
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
