--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -22,9 +22,10 @@
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
+    "eslint": "8.45.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "prisma": "4.14.1",
     "ramda": "0.29.0",
     "size-limit": "8.2.4",
