--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -11,15 +11,16 @@
     "@tailwindcss/typography": "0.5.9",
     "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
-    "@types/node": "^18.17.3",
+    "@types/node": "^18.17.4",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
+    "eslint": "8.45.0",
     "npm-run-all": "4.1.5",
     "postcss-import": "15.1.0",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
-    "prettier-plugin-tailwindcss": "0.3.0",
+    "prettier-plugin-organize-imports": "3.2.3",
+    "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "typescript": "5.0.4"
