--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "1.0.2",
+    "@tsconfig/recommended": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "@uzh-bf/design-system": "2.0.12",
