--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "1.0.2",
+    "@tsconfig/recommended": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/md5": "2.3.2",
     "@types/node": "^18.17.4",
