--- a/packages/migration-v3-import/package.json
+++ b/packages/migration-v3-import/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "1.0.2",
+    "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.17.4",
     "axios": "1.4.0",
     "dotenv": "16.0.3",
