add syncpack lint command

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "syncpack:format": "syncpack format",
     "syncpack:mismatches": "syncpack list-mismatches",
     "syncpack:mismatches:fix": "syncpack fix-mismatches",
+    "syncpack:lint": "syncpack lint",
     "test": "turbo run test",
     "test:run": "turbo run test:run"
   },
