--- a/apps/func-migration-v3-import/local.settings.template
+++ b/apps/func-migration-v3-import/local.settings.template
@@ -7,7 +7,7 @@
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
     "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
-    "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": ""
+    "MIRATION_BLOB_IMPORT_CONNECTION_STRING": "",
+    "MIGRATION_BLOB_STORAGE_PATH": ""
   }
 }
