working with prisma copy

--- a/apps/func-migration-v3-import/tsconfig.json
+++ b/apps/func-migration-v3-import/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "@tsconfig/node18/tsconfig.json",
-    "@tsconfig/recommended/tsconfig.json"
-  ],
-  "include": ["src/**/*"]
+  "extends": "@tsconfig/node18/tsconfig.json",
+  "include": ["src/**/*", "src/client"],
+  "compilerOptions": {}
 }
