--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -15,23 +15,27 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@types/fs-extra": "^11.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "azure-functions-core-tools": "4.0.5274",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
+    "fs-extra": "^11.1.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "prisma": "4.14.1",
+    "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "typescript": "5.1.6"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
     "check": "tsc --noEmit",
-    "dev:migration": "npm-run-all --parallel dev:ts dev:func",
+    "dev:migration": "run-s dev:copy dev:function",
+    "dev:function": "run-p dev:func dev:ts",
+    "dev:copy": "ts-node src/copy.ts",
     "dev:func": "func start -p 7075 --verbose --javascript",
     "dev:ts": "tsup --watch",
     "format": "prettier --write .",
