simplify using klicker prisma package

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -17,14 +17,13 @@
     "jetpack-io.devbox",
     "mikestead.dotenv",
     "mjmlio.vscode-mjml",
-    "mjmlio.vscode-mjml",
     "ms-azuretools.vscode-azurefunctions",
     "ms-azuretools.vscode-docker",
     "ms-vscode-remote.remote-containers",
     "ms-vsliveshare.vsliveshare",
     "netcorext.uuid-generator",
     "prisma.prisma",
-    "wix.glean",
+    // "wix.glean",
     "wix.vscode-import-cost",
     "yzhang.markdown-all-in-one",
     "stivo.tailwind-fold"
