--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -10,6 +10,7 @@
     "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "2.0.12",
     "bcryptjs": "2.4.3",
+    "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
     "next": "13.4.19",
@@ -17,10 +18,12 @@
     "next-intl": "2.19.1",
     "nookies": "2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "1.14.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "@types/react": "^18.2.18",
