fix: ensure that format checking is only applied on same files as formatting

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -44,7 +44,7 @@
     "docusaurus": "docusaurus",
     "examples": "docusaurus-examples",
     "format": "prettier --write src/",
-    "format:check": "prettier --check .",
+    "format:check": "prettier --check src/",
     "rename-version": "docusaurus-rename-version",
     "serve": "docusaurus serve",
     "swizzle": "docusaurus swizzle",
