--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -11,7 +11,9 @@
     "@azure/functions": "4.0.0-alpha.11",
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/prisma": "workspace:*",
-    "jsonwebtoken": "9.0.1"
+    "jsonwebtoken": "9.0.1",
+    "mongoose": "7.3.3",
+    "axios": "1.4.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
