--- a/package.json
+++ b/package.json
@@ -73,5 +73,9 @@
     "node": "18.17.0",
     "pnpm": "8.6.12"
   },
-  "packageManager": "pnpm@8.6.12"
+  "packageManager": "pnpm@8.6.12",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
