fix: use https:// for production urls in auth app

--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -1,8 +1,8 @@
 COOKIE_DOMAIN=klicker.uzh.ch
-NEXTAUTH_URL=http://auth.klicker.uzh.ch
+NEXTAUTH_URL=https://auth.klicker.uzh.ch
 EDUID_CLIENT_ID=uzh_klicker_auth
 EDUID_WELL_KNOWN=https://login.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid
-NEXT_PUBLIC_DEFAULT_REDIRECT=http://manage.klicker.uzh.ch
+NEXT_PUBLIC_DEFAULT_REDIRECT=https://manage.klicker.uzh.ch
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
