--- a/deploy/charts/klicker-uzh-v2/templates/service-app.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/service-app.yaml
@@ -1,6 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: {{ include "chart.fullname" . }}-auth
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.auth.service.type }}
+  ports:
+    - port: {{ .Values.auth.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    {{- include "chart.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: auth
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: {{ include "chart.fullname" . }}-frontend-pwa
   labels:
     {{- include "chart.labels" . | nindent 4 }}
