fix(ci): update GH actions workflows for migration functions

--- a/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-import(qa).yml
@@ -1,16 +1,16 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js project to Azure Function App - klickeruzhprod-migration-import
+name: Build and deploy func-migration-v3-import to Function App (QA)
 
 on:
   push:
     branches:
-      - v3
+      - 'v3'
+    paths:
+      - 'apps/func-migration-v3/**'
+      - '.github/workflows/v3_klickeruzhprod-migration-import**'
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/func-migration-v3-import'
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -25,14 +25,18 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.12
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
+
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-          popd
+          pnpm run build --scope @klicker-uzh/func-migration-v3-import
+          pnpm prune --prod --config.ignore-scripts=true
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
