bugfix of restore lost results and further improvements

--- a/apps/func-migration-v2-export/local.settings.template
+++ b/apps/func-migration-v2-export/local.settings.template
@@ -10,6 +10,7 @@
     "MIGRATION_SERVICE_BUS_CONNECTION_STRING": "",
     "MIGRATION_SERVICE_BUS_QUEUE_NAME": "",
     "MIGRATION_BLOB_EXPORT_CONNECTION_STRING": "",
-    "MIGRATION_BLOB_STORAGE_PATH": ""
+    "MIGRATION_BLOB_STORAGE_PATH": "",
+    "MIGRATION_MONGO_CONNECTION_STRING", ""
   }
 }
