--- a/apps/func-migration-v3-import/local.settings.template
+++ b/apps/func-migration-v3-import/local.settings.template
@@ -8,6 +8,13 @@
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
     "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
     "MIRATION_BLOB_IMPORT_CONNECTION_STRING": "",
-    "MIGRATION_BLOB_STORAGE_PATH": ""
+    "MIGRATION_BLOB_STORAGE_PATH": "",
+    "MIGRATION_BLOB_IMPORT_IMAGES_CONNECTION_STRING": "",
+    "MIGRATION_BLOB_IMPORT_STORAGE_PATH": "",
+    "MIGRATION_LEGACY_MONGO_CONNECTION_STRING": "",
+    "TEAMS_WEBHOOK_URL": "",
+    "LISTMONK_USER": "",
+    "LISTMONK_PASS": "",
+    "LISTMONK_URL": "",
   }
 }
