--- a/legacy/backend-sls/.env.template
+++ b/legacy/backend-sls/.env.template
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://klicker:klicker@localhost:5432/main"
+DATABASE_URL="postgres://klicker:klicker@localhost:5432/klicker"
 APP_SECRET=abcd
 REDIS_HOST=localhost
 REDIS_PORT=6379
