feat: full migration procedure (#3802)
Co-authored-by: BShaq <bulinshaqiri@hotmail.com>

--- a/apps/func-migration-v2-export/local.settings.template
+++ b/apps/func-migration-v2-export/local.settings.template
@@ -7,7 +7,10 @@
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
     "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
-    "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": ""
+    "MIGRATION_SERVICE_BUS_CONNECTION_STRING": "",
+    "MIGRATION_SERVICE_BUS_QUEUE_NAME": "",
+    "MIGRATION_BLOB_EXPORT_CONNECTION_STRING": "",
+    "MIGRATION_BLOB_STORAGE_PATH": "",
+    "MIGRATION_MONGO_CONNECTION_STRING", ""
   }
 }
