--- a/apps/func-migration-v3-import/local.settings.template
+++ b/apps/func-migration-v3-import/local.settings.template
@@ -7,7 +7,14 @@
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
     "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
-    "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": ""
+    "MIRATION_BLOB_IMPORT_CONNECTION_STRING": "",
+    "MIGRATION_BLOB_STORAGE_PATH": "",
+    "MIGRATION_BLOB_IMPORT_IMAGES_CONNECTION_STRING": "",
+    "MIGRATION_BLOB_IMPORT_STORAGE_PATH": "",
+    "MIGRATION_LEGACY_MONGO_CONNECTION_STRING": "",
+    "TEAMS_WEBHOOK_URL": "",
+    "LISTMONK_USER": "",
+    "LISTMONK_PASS": "",
+    "LISTMONK_URL": "",
   }
 }
