fix: types of i18n

--- a/apps/frontend-pwa/tsconfig.json
+++ b/apps/frontend-pwa/tsconfig.json
@@ -24,7 +24,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "types/app.d.ts",
+    "src/types/app.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "src/utils/generateAvatars.js"
