--- a/apps/frontend-manage/tsconfig.json
+++ b/apps/frontend-manage/tsconfig.json
@@ -22,6 +22,6 @@
       "@type/*": ["src/types/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "src/types/app.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
