--- a/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
@@ -13,3 +13,4 @@ stringData:
   DATABASE_URL: {{ .Values.backendGraphql.databaseUrl | quote }}
   REDIS_CACHE_PASS: {{ .Values.backendGraphql.redisCache.pass | quote }}
   REDIS_PASS: {{ .Values.backendGraphql.redisExec.pass | quote }}
+  BLOB_STORAGE_ACCESS_KEY: {{ .Values.blobStorage.accessKey | quote }}
