--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -16,6 +16,10 @@ notifications:
 eduId:
   clientSecret: ''
 
+blobStorage:
+  accountName: ''
+  accessKey: ''
+
 vapid:
   publicKey: ''
   privateKey: ''
