final migration updates before deployment

--- a/apps/func-migration-v3-import/local.settings.template
+++ b/apps/func-migration-v3-import/local.settings.template
@@ -16,5 +16,7 @@
     "LISTMONK_USER": "",
     "LISTMONK_PASS": "",
     "LISTMONK_URL": "",
+    "LISTMONK_TEMPLATE_MIGRATION_SUCCESS": -1,
+    "LISTMONK_TEMPLATE_MIGRATION_FAILURE": -1
   }
 }
